# PDP-Chess

./: .gitignore  CMakeLists.txt  README.md
docs/report/: report.tex  sample.bib
docs/requirements/: besoins.tex  sample.bib
include/: ai_player.h  bitboard_operations.h  bitboards.h  board.h  game.h  move.h
organiz/meeting_reports/: 22_03_02-meeting.md  22_03_02-meeting.txt  22_03_09-meeting.md  22_03_23-meeting.md  22_03_30-meeting.md  22_04_06-meeting.md
src/: .clang-format  CMakeLists.txt  ai_factory.h  ai_player.h  bitboard_operations.cpp  board.cpp  board.h  game.cpp  game.h  legal_move.cpp  main.cpp  minmax.cpp  minmax_ab.cpp
src/include/: ai_player.h  bitboard_operations.h  bitboards.h  board.h  director.h  game.h  heuristic.h  legal_move.h  match_parser.h  move.h  parameters.h
src/include/algorithm/: ai_factory.h  ai_player.h  heuristic.h  mcts.h  minmax_ab.h  mtdf.h  negamax.h  negascout.h  random_player.h
src/include/board/: bitboard_operations.h  bitboards.h  board.h  player_state.h
src/include/engine/: game.h
src/include/engine/board/: bitboard_operations.h  board.h  player_state.h
src/include/engine/move/: legal_move.h  legal_move_v1.h  legal_move_v2.h  move.h
src/include/move/: legal_move.h  legal_move_v1.h  legal_move_v2.h  move.h
src/include/orchestration/: director.h  parameters.h
src/include/player/: ai_player.h  human_player.h  player.h  player_factory.h
src/include/player/ai/: mcts.h  minmax_ab.h  mtdf.h  negamax.h  negascout.h  random_player.h
src/include/util/: match_parser.h  vector_shuffle.h
src/include/valuation/: heuristic.h
src/json_exemple/: ai_test.json  heuristic_test.json  template.json
src/src/: director.cpp  game.cpp  main.cpp  match_parser.cpp  parameters.cpp
src/src/algorithm/: ai_factory.cpp  heuristic.cpp  mcts.cpp  minmax.cpp  minmax_ab.cpp  mtdf.cpp  negamax.cpp  negascout.cpp  random_player.cpp
src/src/board/: bitboard_operations.cpp  bitboards.cpp  board.cpp  player_state.cpp
src/src/engine/: game.cpp
src/src/engine/board/: bitboard_operations.cpp  board.cpp  player_state.cpp
src/src/engine/move/: legal_move_v1.cpp  legal_move_v2.cpp
src/src/move/: legal_move.cpp  legal_move_v1.cpp  legal_move_v2.cpp
src/src/orchestration/: director.cpp  parameters.cpp
src/src/player/: human_player.cpp  player_factory.cpp
src/src/player/ai/: mcts.cpp  minmax_ab.cpp  negamax.cpp  negascout.cpp  random_player.cpp
src/src/util/: match_parser.cpp  vector_shuffle.cpp
src/src/valuation/: heuristic.cpp
src/test/: ai_factory_test.cpp  bitboard_move_test.cpp  bitboard_operation_test.cpp  board_io_test.cpp  condition_isdraw_test.cpp  game_test.cpp  heuristic_test.cpp  legal_move_test.cpp  speed_test.cpp  speed_test_alphabeta.cpp  speed_test_negamax.cpp  speed_test_negascout.cpp  versions_test.cpp
src/tests/: placeholder_test.cpp
test/: bitboard_io_test.cpp  bitboard_move_test.cpp  bitboard_operation_test.cpp  board_io_test.cpp  game_test.cpp  heuristic_test.cpp  legal_move_test.cpp  legal_move_v2_test.cpp  placeholder_test.cpp
